[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://gfx/enemy.png" type="Texture" id=2]
[ext_resource path="res://animations/enemy/idle.tres" type="Animation" id=3]
[ext_resource path="res://animations/enemy/move.tres" type="Animation" id=4]
[ext_resource path="res://scenes/TrailParticle.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[sub_resource type="CircleShape2D" id=2]
radius = 19.0263

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
position = Vector2( 146, 113 )
z_index = 5
z_as_relative = false
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="TrailParticle" parent="." instance=ExtResource( 5 )]
position = Vector2( -6, -6 )

[node name="TrailParticle2" parent="." instance=ExtResource( 5 )]
position = Vector2( 6, -6 )

[node name="TrailParticle3" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -8 )
z_index = 6
z_as_relative = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/idle = ExtResource( 3 )
anims/move = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 5
texture = ExtResource( 2 )
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
